--- a/public/404.html
+++ b/public/404.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>social-canvas-calendar</title>
     <script>
-      // SPA redirect handler for custom domain
-      // This script takes the current URL and redirects to the base URL
-      // with the path stored in the URL hash, so the SPA can handle routing
+      // SPA redirect handler for GitHub Pages with subpath
+      // This script redirects 404s to the base path with the route in session storage
+      // so the SPA can handle routing
       (function() {
-        var path = window.location.pathname;
-        var search = window.location.search;
+        var pathSegmentsToKeep = 1; // Change to number of path segments in your base path (e.g., /repo-name/ = 1)
+        var path = window.location.pathname.split('/').slice(0, pathSegmentsToKeep + 1).join('/') + '/';
+        var route = window.location.pathname.split('/').slice(pathSegmentsToKeep + 1).join('/');
 
-        // Only redirect if we're not already at the base path
-        if (path !== '/' && path !== '/index.html' && path !== '') {
-          var redirect = '/' + (search ? '?' + search : '') + '#' + path;
-          window.location.replace(redirect);
-        }
+        // Store the original route in session storage
+        sessionStorage.setItem('redirectPath', '/' + route + window.location.search + window.location.hash);
+
+        // Redirect to the base path
+        window.location.replace(path);
       })();
     </script>
   </head>
